Use flex-direction to fix alignment

--- a/ch05-flexbox/style.css
+++ b/ch05-flexbox/style.css
@@ -70,4 +70,10 @@ body * + * {
 
 .column-sidebar {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.column-sidebar > .tile {
+  flex: 1;
 }
